objects/CEE__c.object
<CustomObject>
    <fields>
        <fullName>Account_Friendly_Name__c</fullName>
        <label>Account Friendly Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_s_Email__c</fullName>
        <description>Holds CPOC Lab Requestors account manager email id. This field is added for CPOC Request</description>
        <formula>Primary_Account__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager's Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_English__c</fullName>
        <formula>If( ISBLANK(Primary_Account__r.AccountNameEnglish__c) || ISNULL(Primary_Account__r.AccountNameEnglish__c),Primary_Account__r.Name,Primary_Account__r.AccountNameEnglish__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name(English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Theater__c</fullName>
        <formula>TEXT( Primary_Account__r.Theatre__c )</formula>
        <inlineHelpText>The theater of the primary associated Account.</inlineHelpText>
        <label>Account Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_Transformational__c</fullName>
        <formula>Primary_Account__r.Super_Group_Program_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type (Transformational)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type (Legacy CES)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Goodwill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_team_arrival_date__c</fullName>
        <description>This Field is added for CPOC request</description>
        <label>Account Team Arrival Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Days__c</fullName>
        <description>This is for calculating actual days for CPOC Request.</description>
        <formula>CASE(MOD( DATEVALUE(Customer_Start_date__c) - DATE(1985,6,24),7), 
0 , CASE( MOD( DATEVALUE(CPOC_End_Date__c) - DATEVALUE(Customer_Start_date__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(CPOC_End_Date__c) - DATEVALUE(Customer_Start_date__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(CPOC_End_Date__c) - DATEVALUE(Customer_Start_date__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(CPOC_End_Date__c) - DATEVALUE(Customer_Start_date__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(CPOC_End_Date__c) - DATEVALUE(Customer_Start_date__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(CPOC_End_Date__c) - DATEVALUE(Customer_Start_date__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(CPOC_End_Date__c) - DATEVALUE(Customer_Start_date__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(CPOC_End_Date__c) - DATEVALUE(Customer_Start_date__c) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Cancellation_Reasoning__c</fullName>
        <inlineHelpText>Additional room for cancellation explanation</inlineHelpText>
        <label>Additional Cancellation Reasoning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>This field is for the ITCE form; it is where a requestor can specify additional comments and any expectations or previous engagement with Cisco IT.</description>
        <inlineHelpText>If you have any additional comments ,please specify them here.</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Email_IDs__c</fullName>
        <description>Additional Email ids specified by CPOC Lab Requestor</description>
        <inlineHelpText>Email IDs (separated by commas) of additional people to be notified when sending email notifications</inlineHelpText>
        <label>Additional Email IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Return_Reasoning__c</fullName>
        <label>Additional Return Reasoning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Scheduler_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be used as additional secondary scheduler 4 for CPOC requests.</description>
        <label>Additional Scheduler 4</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements_Events3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_Scheduler2_Email__c</fullName>
        <description>This will be used as additional secondary scheduler2 Email for CPOC requests.</description>
        <formula>Additional_Secondary_Scheduler2__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Scheduler 2 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_Scheduler2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be used as additional secondary scheduler2  for CPOC requests.</description>
        <label>Additional Scheduler 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_Scheduler_Email__c</fullName>
        <description>Additional secondary schedular email for CPOC lab request</description>
        <formula>Additional_Secondary_Scheduler__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Scheduler 1 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for Sanjose location. Back up scheduler for Secondary Scheduler</description>
        <label>Additional Scheduler 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_scheduler_3_Email__c</fullName>
        <description>This will be used as additional secondary scheduler3 Email for CPOC requests.</description>
        <formula>Additional_Secondary_scheduler_3__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Scheduler 3 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Secondary_scheduler_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be used as additional secondary scheduler3 for CPOC requests.</description>
        <label>Additional Scheduler 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagements_Events2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Solution_Details__c</fullName>
        <inlineHelpText>Please use this section to detail the customer and account objectives. Please also include any useful information such as a draft agenda.</inlineHelpText>
        <label>Customer and Account Objectives</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Upside_USD__c</fullName>
        <description>12 month potential revenue related to this visit (in dollars)</description>
        <inlineHelpText>12 month potential revenue related to this visit (in dollars) 
Note:The 12-month potential revenue includes the immediate potential revenue</inlineHelpText>
        <label>Additional Upside (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Useful_Information__c</fullName>
        <label>Additional Useful Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agenda_Consultation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agenda Consultation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agenda_Objective__c</fullName>
        <description>ITCE form - free form field.</description>
        <inlineHelpText>The purpose of the customer meeting and the details regarding topics to be presented by IT (e.g. BYOD, ISE, etc).</inlineHelpText>
        <label>Agenda/Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Primary_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a second Alternate Primary Contact is desired, specify them here.</description>
        <inlineHelpText>If a second Alternate Primary Contact is desired, specify them here.</inlineHelpText>
        <label>Alternate Primary Contact II</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagement_Scheduler9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Primary_Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a third Alternate Primary Contact is desired, specify them here.</description>
        <inlineHelpText>If a third Alternate Primary Contact is desired, specify them here.</inlineHelpText>
        <label>Alternate Primary Contact III</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagement_Scheduler5aE6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For the ITCE form, if the requestor would like to designate an alternate primary contact for the engagement.</description>
        <inlineHelpText>If you would like to designate an alternate primary contact for the engagement, do so here.</inlineHelpText>
        <label>Alternate Primary Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagement_Scheduler4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_When_Opportunity_Booked__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Opportunity Amount at the time of booking</description>
        <label>Amount When Opportunity Booked</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_Attendees_Presenters_Remote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Attendees/Presenters Remote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Architecture__c</fullName>
        <label>Architecture</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cisco Priorities</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Cross Architectures/Verticals</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Data Center and Virtualization</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networking</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networks</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>PM Logistics</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Security and Trust</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Service Provider Demo</fullName>
                </value>
                <value>
                    <fullName>Service Provider Video</fullName>
                </value>
                <value>
                    <fullName>Software and Services</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Engineer__c</fullName>
        <description>This will store the concatenated value of Personnel. This is related to CPOC lab request.</description>
        <label>Assigned Engineer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendees_Count__c</fullName>
        <description>Attendees Count</description>
        <label>Attendees Count</label>
        <summaryForeignKey>CEE_Attendee__c.Customer_Engagement_Events__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Audience_Type__c</fullName>
        <description>Type of audience that will be attending the engagement.</description>
        <inlineHelpText>Choose one value that describes the type of attendees for this engagement.</inlineHelpText>
        <label>Audience Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Both</fullName>
                    <default>true</default>
                    <label>Both</label>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Backup PM when primary PM is unavailable for any reason (PTO, sick, etc).</description>
        <inlineHelpText>This is the backup PM when the primary PM is unavailable for any reason.</inlineHelpText>
        <label>Backup PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagement_Scheduler3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_Opportunity_Value_After_180__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Booked Opportunity Amount After 180days the End of the event</description>
        <label>Booked Opportunity Value After 180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_Opportunity_Value_After_30__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Booked Opportunity Amount After 30days the End of the event</description>
        <label>Booked Opportunity Value After 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_Opportunity_Value_After_90__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Booked Opportunity Amount After 90days the End of the event</description>
        <label>Booked Opportunity Value After 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BriefingType__c</fullName>
        <description>CES Request  type</description>
        <label>Request Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_Days__c</fullName>
        <formula>(DATEVALUE(End_Date_Time__c) - DATEVALUE(Start_Date_Time__c))+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Briefing Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Briefing_Notes__c</fullName>
        <label>Briefing Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Briefing_Status__c</fullName>
        <description>Request status</description>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_Theatre__c</fullName>
        <description>This field is used for ITCE requests to allow Approval process based on Theatre input by requesters</description>
        <label>Briefing Theatre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
                <value>
                    <fullName>APJC</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Global Service Provider</fullName>
                </value>
                <value>
                    <fullName>Global Enterprise Theater</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Outcomes__c</fullName>
        <label>Business Outcomes</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Use analytics and BI to improve biz decisions and outcome</fullName>
                </value>
                <value>
                    <fullName>Generate Growth</fullName>
                </value>
                <value>
                    <fullName>Increase Profits</fullName>
                </value>
                <value>
                    <fullName>Increase Speed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reduce Risk</fullName>
                </value>
                <value>
                    <fullName>Simplify the business</fullName>
                </value>
                <value>
                    <fullName>Corporate Social Responsibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Portfolio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPOC_Customer_Name__c</fullName>
        <label>CPOC Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPOC_End_Date__c</fullName>
        <description>Visit End Date of CPOC lab request</description>
        <label>CPOC End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPOC_Lab_Mailer__c</fullName>
        <description>CPOC Lab email alias is determined based on CPOC lab</description>
        <label>CPOC Lab Mailer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CPOC_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CPOC Location is added for CPOC lab request</description>
        <label>CPOC Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Preferred_Lab__c</field>
                <operation>contains</operation>
                <valueField>CEE_Location__c.Name</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CEE_Location__c</referenceTo>
        <relationshipLabel>Customer Engagements &amp; Events (CPOC Location)</relationshipLabel>
        <relationshipName>Customer_Engagements_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPOC_Recipient1__c</fullName>
        <label>CPOC Recipient1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CPOC_Recipient2__c</fullName>
        <description>CPOC Recipient2</description>
        <label>CPOC Recipient2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CPOC_Recipient3__c</fullName>
        <description>CPOC Recipient3</description>
        <label>CPOC Recipient3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CPOC_Start_Date__c</fullName>
        <description>Visit Start Date of CPOC Lab request</description>
        <label>CPOC Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPOC_Status__c</fullName>
        <description>CPOC Status field is added for CPOC lab request.</description>
        <label>CPOC Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Lab Redirect</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPOC_Survey_End_Date__c</fullName>
        <description>It will calculate the CPOC survey end date</description>
        <formula>CASE(
MOD(DATEVALUE(CPOC_End_Date__c) - DATE(1900, 1, 7), 7),
0, DATEVALUE(CPOC_End_Date__c) + 4 + FLOOR((4-1)/5)*2,
1, DATEVALUE(CPOC_End_Date__c) + 4 + FLOOR((4)/5)*2,
2, DATEVALUE(CPOC_End_Date__c) + 4 + FLOOR((4+1)/5)*2,
3, DATEVALUE(CPOC_End_Date__c) + 4 + FLOOR((4+2)/5)*2,
4, DATEVALUE(CPOC_End_Date__c) + 4 + FLOOR((4+3)/5)*2,
5, DATEVALUE(CPOC_End_Date__c) + 4 + CEILING((4)/5)*2,
6, DATEVALUE(CPOC_End_Date__c) - IF(4&gt;0,1,0) + 4 + CEILING((4)/5)*2,
null)</formula>
        <label>CPOC Survey End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPOC_Survey_Reminder_date__c</fullName>
        <description>It will be used to populate the survey remainder end date for sending survey reminder mail for CPOC</description>
        <formula>CASE(
MOD(DATEVALUE(CPOC_End_Date__c) - DATE(1900, 1, 7), 7),
0, DATEVALUE(CPOC_End_Date__c) + 2 + FLOOR((2-1)/5)*2,
1, DATEVALUE(CPOC_End_Date__c) + 2 + FLOOR((2)/5)*2,
2, DATEVALUE(CPOC_End_Date__c) + 2 + FLOOR((2+1)/5)*2,
3, DATEVALUE(CPOC_End_Date__c) + 2 + FLOOR((2+2)/5)*2,
4, DATEVALUE(CPOC_End_Date__c) + 2 + FLOOR((2+3)/5)*2,
5, DATEVALUE(CPOC_End_Date__c) + 2 + CEILING((2)/5)*2,
6, DATEVALUE(CPOC_End_Date__c) - IF(2&gt;0,1,0) + 2 + CEILING((2)/5)*2,
null)</formula>
        <label>CPOC Survey Reminder date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Opportunity_Value_After_180__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Cancelled Opportunity Amount After 180days the End of the event</description>
        <label>Cancel Opportunity Value After 180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel_Opportunity_Value_After_30__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Cancelled Opportunity Amount After 30days the End of the event</description>
        <label>Cancel Opportunity Value After 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel_Opportunity_Value_After_90__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Cancelled Opportunity Amount After 90days the End of the event</description>
        <label>Cancel Opportunity Value After 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>Scheduler Cancellation Reason</description>
        <inlineHelpText>Reason for cancelling a briefing request</inlineHelpText>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Manager Cancels – Early</fullName>
                </value>
                <value>
                    <fullName>AM cancels after all presenters confirmed</fullName>
                </value>
                <value>
                    <fullName>AM cancels day before event</fullName>
                </value>
                <value>
                    <fullName>Briefing center demo eng. Resources unavailable</fullName>
                </value>
                <value>
                    <fullName>Briefing center PM resources unavailable</fullName>
                </value>
                <value>
                    <fullName>Briefing center room reasons unavailable</fullName>
                </value>
                <value>
                    <fullName>Cancelled because no TelePresence room</fullName>
                </value>
                <value>
                    <fullName>Center closed (Public holiday, scheduled maintenance)</fullName>
                </value>
                <value>
                    <fullName>Changed to customer site</fullName>
                </value>
                <value>
                    <fullName>Customer schedule changed</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Global travel restriction</fullName>
                </value>
                <value>
                    <fullName>Insufficient information</fullName>
                </value>
                <value>
                    <fullName>No Presenters available</fullName>
                </value>
                <value>
                    <fullName>No Resources available</fullName>
                </value>
                <value>
                    <fullName>No Rooms available</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Presenter resources unavailable</fullName>
                </value>
                <value>
                    <fullName>Travel/budget restrictions</fullName>
                </value>
                <value>
                    <fullName>Visa issues</fullName>
                </value>
                <value>
                    <fullName>Weather/Travel</fullName>
                </value>
                <value>
                    <fullName>Wrong briefing type requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Opportunity_Deal_value__c</fullName>
        <label>Child Opportunity Deal value</label>
        <summarizedField>Multi_Opportunity__c.Deal_Value_Summary_000s__c</summarizedField>
        <summaryForeignKey>Multi_Opportunity__c.Customer_Engagements_Events__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This field is used for CPOC Lab request. It is getting populated from Primary Account city.</description>
        <formula>Primary_Account__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Oppty_Value_After_180__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Commit Opportunity Amount After 180days the End of the event</description>
        <label>Commit Oppty Value After 180</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Oppty_Value_After_30__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Commit Opportunity Amount After 30days the End of the event</description>
        <label>Commit Oppty Value After 30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Oppty_Value_After_90__c</fullName>
        <defaultValue>0</defaultValue>
        <description>JiffleNow Re-design: To Capture Commit Opportunity Amount After 90days the End of the event</description>
        <label>Commit Oppty Value After 90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Oppty_Value_Before__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commit Oppty Value Before</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Copy_Request_To_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a second Copy Request To contact is desired, specify them here.</description>
        <inlineHelpText>If a second Copy Request To contact is desired, specify them here.</inlineHelpText>
        <label>Copy Request To II</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagement_Scheduler5aEG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Request_To_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a third Copy Request To contact is desired, specify them here.</description>
        <inlineHelpText>If a third Copy Request To contact is desired, specify them here.</inlineHelpText>
        <label>Copy Request To III</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagement_Scheduler5aEQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Request_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ITCE form. Any additional people to copy on the request, or proxy person to handle the request after submission (optional).</description>
        <inlineHelpText>Please indicate any additional people who need to be copied on communications for this customer engagement.</inlineHelpText>
        <label>Copy Request To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Engagement_Scheduler5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_of_Meetings__c</fullName>
        <label>Count of Meetings</label>
        <summaryFilterItems>
            <field>Jiffle_Attendee_Invitee__c.FirstAttendeeFlag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Jiffle_Attendee_Invitee__c.Reporting_Meeting_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled/Deleted</value>
        </summaryFilterItems>
        <summaryForeignKey>Jiffle_Attendee_Invitee__c.Customer_Engagements_Events__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of the CPOC Lab Request Customer</description>
        <formula>TEXT(Primary_Account__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Booked_Opportunity_Amount__c</fullName>
        <formula>IF(Current_Opportunity_Status__c = "Booked",Current_Opportunity_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Booked Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Cancelled_Opportunity_Amount__c</fullName>
        <formula>IF(Current_Opportunity_Status__c = "Cancelled",Current_Opportunity_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Cancelled Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>